--- a/package.json
+++ b/package.json
@@ -4,15 +4,18 @@
   "description": "",
   "main": "test.js",
   "type":"commonjs",
-  "scripts": {},
+  "scripts":  {
+    "test": "playwright test",
+    "build": "webpack",
+    "start": "node server.js"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@playwright/test": "^1.42.1",
-    "@types/node": "^20.11.28"
-  },
-  "dependencies": {
+    "@types/node": "^20.11.28",
     "playwright": "^1.42.1"
-  }
+  },
+  "dependencies": {}
 }
